--- a/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/WeblogPlugin.less
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/WeblogPlugin.less
@@ -143,7 +143,7 @@ table.calendar
         td  a[href=<next-month>] >>
     tr
         td.weekdays  Mon,Tue ...  Sun
-    tr.calendar1/2
+    tr
         td.othermonth
         td.days
         td.link a[herf=<...startDate=ddmmyy>]
