add: hierarchy view of wiki pages.

--- a/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/build.less
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/build.less
@@ -103,6 +103,7 @@ Stylesheet: JSPWiki
 //@import "dropdown.less";
 //JSPWiki Components: Nav
 @import "pagination.less";
+@import "treepages.less";
 //JSPWiki Components: Popovers
 @import "Tips.less";
 @import "Magnify.less";
