add: toggling panels of sidebar.

--- a/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/Template.Content.less
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/Template.Content.less
@@ -84,6 +84,22 @@ DOM Structure:
 }
 
 /*
+Show/hide panels of sidebar.
+*/
+.stacked-sidemenu {
+	display: none;
+}
+.stacked-sidemenu.active {
+	display: inherit;
+}
+.stacked-pages {
+	display: none;
+}
+.stacked-pages.active {
+	display: inherit;
+}
+
+/*
 Put sidebar at the right side
 - FFS: also move toggle buttons to other side ?
 */
