add: scope selection web-page, draft scope manager.

--- a/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/Template.Content.less
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/Template.Content.less
@@ -99,6 +99,12 @@ Show/hide panels of sidebar.
 	display: inherit;
 }
 
+/*:FVK: workaround.*/
+.scope-set { display: none; }
+.scope-set.active { display: inherit; }
+.scope-select { display: none; }
+.scope-select.active { display: inherit; }	
+
 /*
 Put sidebar at the right side
 - FFS: also move toggle buttons to other side ?
