revision of text resources for locales.

--- a/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/bootstrap/utilities.less
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/bootstrap/utilities.less
@@ -30,6 +30,9 @@
 .show {
   display: block !important;
 }
+.show-inline {
+  display: inline !important;
+}
 .invisible {
   visibility: hidden;
 }
