add: command LOSTPASSWORD; fix: wiki's HTTP context referencing from LESS.

--- a/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/Template.UserBox.less
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/Template.UserBox.less
@@ -63,7 +63,7 @@ Section: Login
     LoginContent.jsp
 */
 
-.context-login {
+.context-WIKI_LOGIN {
   //hide the navigation TABs and only show the tab panels
   .page-content > ul.nav { display:none; }
 }
