--- a/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/Template.Workflow.less
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/context/styles/haddock/default/Template.Workflow.less
@@ -22,7 +22,7 @@
 Style: WorkflowContent.jsp
 
 */
-.context-workflow .workflow-details pre {
+.context-WIKI_WORKFLOW .workflow-details pre {
     border-style:dashed;
     .small;
     max-height:8em;
